--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6509,3 +6509,37 @@ label {
 	color: var(--tg-primary-color);
 	display: inline-block;
  }
+
+ .custom-modal-overlay {
+  position: fixed; 
+  inset: 0px; 
+  background-color: rgba(0,0,0, 0.75);
+  z-index: 1000;
+ }
+
+ .custom-modal-overlay>div {
+  padding: 0!important;
+ }
+
+.custom-modal-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  right: auto;
+  bottom: auto;
+  transform: translate(-50%, -50%);
+  background: white;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.custom-modal-close-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: none;
+  border: none;
+  font-size: 20px;
+  cursor: pointer;
+}
